# vanguard-music-player

./: .gitignore  README.md  generate-songs.py  package.json
docs/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_device.rs  main.rs  tray.rs
