[package]
name = "vanguard-player"
version = "0.1.1"
description = "A fast, lightweight and ad-free desktop music player."
authors = ["you"]
edition = "2021"

[lib]
name = "vanguard_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-global-shortcut = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
lazy_static         = "1.4"
tokio               = { version = "1", features = ["full"] }
reqwest             = { version = "0.12", features = ["json"] }
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }
